# f1-pitwall

./: .mcp.json  DEPLOY.md  IMPLEMENTATION.md  LAUNCHDARKLY.md  PLAN.md  PROGRESS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.base.json
.claude/rules/: launchdarkly.md
apps/f1-sidecar/: .env.example  Dockerfile  pyproject.toml  railway.json
apps/f1-sidecar/src/f1_sidecar/: auth.py  main.py  metrics.py  negotiate.py  server.py  topics.py  upstream.py
apps/f1-sidecar/tests/: conftest.py  test_auth.py  test_main.py  test_metrics.py  test_negotiate.py  test_server.py  test_topics.py  test_upstream.py
apps/ingest/: .env.example  Dockerfile  package.json  tsconfig.json
apps/ingest/src/: launchdarkly.ts  logger.ts  main.ts  mode.ts  server.ts
apps/ingest/test/: auth.test.ts  derived.test.ts  engine.test.ts  feed.test.ts  jsonStream.test.ts  launchdarkly.test.ts  merge.test.ts  openf1.test.ts  openf1Full.test.ts  player.test.ts  sidecarClient.test.ts  transform.test.ts
apps/web/: .env.example  Dockerfile  next.config.mjs  package.json  tsconfig.json  vercel.json
apps/web/scripts/: dbg.mjs  idleshot.mjs  mapshot.mjs  practiceshot.mjs  raceshot.mjs  radio-filter.mjs  radio-shot.mjs  verify-design.mjs  verify-design2.mjs  verify-fixes.mjs  verify-metrics.mjs  verify-mode.mjs  verify-player.mjs  verify-radio.mjs  verify-transcript.mjs  verify-v2.mjs  verify-year.mjs  verify.mjs  yellowshot.mjs  zoom.mjs
apps/web/src/: instrumentation.ts  (+1 more)
design_imp/: F1 Broadcast Dashboard.dc.html  README.md
(+74 files in other folders)
