[project]
name = "f1-sidecar"
version = "0.1.0"
description = "Relays F1's SignalR live-timing feed to apps/ingest — see apps/ingest/src/feed/sidecarClient.ts"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32,<3",
  "websockets>=13,<14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "responses>=0.25,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
